--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'org.jmailen.kotlinter'
 }
 
 android {
@@ -55,6 +56,9 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.3.1'
 
     implementation "io.arrow-kt:arrow-core:$arrow_version"
+
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
