--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,7 @@ pluginManagement {
         id 'com.android.application' version '7.1.0-alpha13'
         id 'com.android.library' version '7.1.0-alpha13'
         id 'org.jetbrains.kotlin.android' version '1.5.31'
+        id 'org.jmailen.kotlinter' version '3.6.0'
     }
 }
 dependencyResolutionManagement {
