--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,14 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        // Treat all Kotlin warnings as errors
+        allWarningsAsErrors = true
+        // Set JVM target to 1.8
+        jvmTarget = "1.8"
+        // Allow use of @OptIn
+        freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
+        // Enable default methods in interfaces
+        freeCompilerArgs += "-Xjvm-default=all"
     }
     buildFeatures {
         compose true
@@ -55,6 +62,10 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
 
+    implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-pager:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-pager-indicators:$accompanist_version"
+
     implementation "io.arrow-kt:arrow-core:$arrow_version"
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
@@ -65,3 +76,4 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 }
+
