--- a/build.gradle
+++ b/build.gradle
@@ -8,5 +8,6 @@ buildscript {
     ext {
         compose_version = '1.1.0-alpha05'
         arrow_version = '1.0.0'
+        accompanist_version = '0.19.0'
     }
 }
