--- a/settings.gradle
+++ b/settings.gradle
@@ -5,8 +5,9 @@ pluginManagement {
         mavenCentral()
     }
     plugins {
-        id 'com.android.application' version '7.1.0-alpha13'
-        id 'com.android.library' version '7.1.0-alpha13'
+        def asPluginVersion = '7.1.0-beta01'
+        id 'com.android.application' version asPluginVersion
+        id 'com.android.library' version asPluginVersion
         id 'org.jetbrains.kotlin.android' version '1.5.31'
         id 'org.jmailen.kotlinter' version '3.6.0'
     }
