add firebase settings

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,18 @@ pluginManagement {
         id 'com.android.library' version asPluginVersion
         id 'org.jetbrains.kotlin.android' version '1.5.31'
         id 'org.jmailen.kotlinter' version '3.6.0'
+        id 'com.google.gms.google-services' version '4.3.10'
+        id 'com.google.firebase.crashlytics' version '2.7.1'
+    }
+    resolutionStrategy {
+        eachPlugin {
+            if (requested.id.id == 'com.google.gms.google-services') {
+                useModule('com.google.gms:google-services:4.3.10')
+            }
+            if (requested.id.id == 'com.google.firebase.crashlytics') {
+                useModule('com.google.firebase:firebase-crashlytics-gradle:2.7.1')
+            }
+        }
     }
 }
 dependencyResolutionManagement {
