--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,6 +120,9 @@ dependencies {
 
     implementation "io.arrow-kt:arrow-core:$arrow_version"
 
+    // ad
+    implementation 'com.google.android.gms:play-services-ads:20.4.0'
+
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
     testImplementation 'io.kotest:kotest-runner-junit5:4.6.3'
