--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,10 @@
     package="com.github.daneko.tubotan">
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".App"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tubotan">
@@ -21,6 +21,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!--https://developers.google.com/admob/android/banner?authuser=0#always_test_with_test_ads-->
+        <meta-data
+            android:name="com.google.android.gms.ads.com.github.daneko.tubotan"
+            android:value="ca-app-pub-3940256099942544/6300978111" />
     </application>
 
 </manifest>
