--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ task clean(type: Delete) {
 
 buildscript {
     ext {
-        compose_version = '1.1.0-alpha06'
+        compose_version = '1.1.0-beta01'
         arrow_version = '1.0.0'
-        accompanist_version = '0.19.0'
+        accompanist_version = '0.20.0'
     }
 }
