--- a/settings.gradle
+++ b/settings.gradle
@@ -5,10 +5,12 @@ pluginManagement {
         mavenCentral()
     }
     plugins {
-        def asPluginVersion = '7.1.0-beta01'
+        def asPluginVersion = '7.1.0-beta02'
+        def kotlinVersion = '1.5.31'
         id 'com.android.application' version asPluginVersion
         id 'com.android.library' version asPluginVersion
-        id 'org.jetbrains.kotlin.android' version '1.5.31'
+        id 'org.jetbrains.kotlin.android' version kotlinVersion
+        id 'org.jetbrains.kotlin.plugin.parcelize' version kotlinVersion
         id 'org.jmailen.kotlinter' version '3.6.0'
         id 'com.google.gms.google-services' version '4.3.10'
         id 'com.google.firebase.crashlytics' version '2.7.1'
