--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,6 +128,8 @@ dependencies {
     // ad
     implementation 'com.google.android.gms:play-services-ads:20.4.0'
 
+    implementation 'com.google.android.material:material:1.5.0-beta01'
+
     implementation "io.arrow-kt:arrow-core:$arrow_version"
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
