--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ task clean(type: Delete) {
 
 buildscript {
     ext {
-        compose_version = '1.1.0-beta02'
+        compose_version = '1.1.0-beta03'
         arrow_version = '1.0.1'
-        accompanist_version = '0.20.0'
+        accompanist_version = '0.21.2-beta'
     }
 }
