--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ android {
             debuggable true
             minifyEnabled false
             signingConfig signingConfigs.debug
+            firebaseCrashlytics {
+                mappingFileUploadEnabled false
+            }
         }
         release {
             debuggable false
@@ -108,6 +111,7 @@ dependencies {
     implementation "androidx.compose.material3:material3:1.0.0-alpha01"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "androidx.navigation:navigation-compose:2.4.0-beta02"
 
     // accompanist
     implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
@@ -127,7 +131,7 @@ dependencies {
     // ad
     implementation 'com.google.android.gms:play-services-ads:20.5.0'
 
-    implementation 'com.google.android.material:material:1.5.0-beta01'
+    implementation 'com.google.android.material:material:1.6.0-alpha01'
 
     implementation "io.arrow-kt:arrow-core:$arrow_version"
 
